[gd_scene load_steps=4 format=3 uid="uid://fkoit46sv3kg"]

[ext_resource type="Script" uid="uid://tsuyb6u14prb" path="res://src/scenes/ui/dialogue/DialogueUi.gd" id="1_w4iud"]
[ext_resource type="PackedScene" uid="uid://ta6j87a8brin" path="res://src/scenes/ui/dialogue/DialogueOptionButton.tscn" id="2_3dhjj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dhjj"]
bg_color = Color(0.243137, 0.156863, 0.196078, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.47451, 0.258824, 0.207843, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2

[node name="DialogueUi" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4iud")
option_button_scene = ExtResource("2_3dhjj")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3dhjj")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeakerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "NPC"
horizontal_alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="OptionsContainer" type="GridContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
